# data_rs

./: Cargo.toml  test_data.csv  test_data.parquet
src/: commands.rs  convert.rs  data_file.rs  lib.rs  main.rs
test_data/: test_data_windows-1252.csv  test_data_windows-1252.csv_new
