[package]
name = "datatool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
clap = { version = "3.2.*", features = ["derive"] }
encoding = "0.2.*"
polars = { version = "0.22.*", features = ["lazy", "fmt", "parquet"] }

[profile.release-small]
inherits = "release"
strip = true
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"